<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/river"
    tools:context=".presentation.activities.DataFormActivity">

    <ImageButton
        android:id="@+id/back_arrow"
        android:layout_width="65dp"
        android:layout_height="58dp"
        android:backgroundTint="#00FFFFFF"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_item_of_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/dataform_screen_name"
        android:textColor="?attr/backgroundColor"
        android:textSize="@dimen/text_size_details"
        app:layout_constraintBottom_toTopOf="@id/text_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="?attr/textFillColor"
        app:layout_constraintBottom_toTopOf="@id/text_input2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_of_list">

        <EditText
            android:id="@+id/name_of_fish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:alpha="0.6"
            android:background="?attr/backgroundColor"
            android:hint="@string/fish_name"
            android:inputType="text"
            android:textColor="?attr/textFillColor"
            android:textColorHint="?attr/textFillColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="?attr/textFillColor"
        app:layout_constraintBottom_toTopOf="@id/text_input3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_of_list">

        <EditText
            android:id="@+id/weight_of_fish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:alpha="0.6"
            android:background="?attr/backgroundColor"
            android:hint="@string/fish_weight"
            android:inputType="number|numberDecimal"
            android:textColor="?attr/textFillColor"
            android:textColorHint="?attr/textFillColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="?attr/textFillColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input2">

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:alpha="0.6"
            android:background="?attr/backgroundColor"
            android:hint="@string/location"
            android:inputType="text"
            android:textColor="?attr/textFillColor"
            android:textColorHint="?attr/textFillColor" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/add_photo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:rotationX="17"
        android:src="@drawable/ic_baseline_add_a_photo_24"
        app:layout_constraintBottom_toTopOf="@+id/add_fish_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input3" />

    <ImageView
        android:id="@+id/preview_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_photo"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input3" />

    <Button
        android:id="@+id/add_fish_btn"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:background="?attr/backgroundColor"
        android:rotation="0"
        android:text="@string/add_fish_button"
        android:textAlignment="center"
        android:textColorHint="?attr/textFillColor"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_photo" />

</androidx.constraintlayout.widget.ConstraintLayout>